Added the Skydrifter piece.

--- a/src/app/selected/selected.component.html
+++ b/src/app/selected/selected.component.html
@@ -48,7 +48,7 @@
       <div *ngIf="getPiece().hasAbility()" class="additional-details" [innerHTML]="getAbilityDescription()">
       </div>
       <div *ngIf="!getPiece().hasAbility()" class="additional-details">
-        No skills for this machine.
+        No abilities for this machine.
       </div>
     </div>
 
