--- a/src/app/game-selection/game-selection.component.html
+++ b/src/app/game-selection/game-selection.component.html
@@ -6,7 +6,7 @@
 
   <div class="custom-game-choice">
     <div class="custom-board-outline"></div>
-    <button class="select-custom-game" disabled="true">
+    <button class="select-custom-game" (click)="startCustomGame()">
       Custom
     </button>
   </div>
