--- a/src/app/custom-game/custom-game.component.html
+++ b/src/app/custom-game/custom-game.component.html
@@ -1,3 +1,9 @@
 <div class="custom-game">
-  <!-- TODO: Put progress here and use child routes to navigate -->
+  
+  <app-custom-game-progress></app-custom-game-progress>
+  
+  <div class="custom-game-router-outlet">
+    <router-outlet></router-outlet>
+  </div>
+
 </div>
