Added board render on board setup.

--- a/src/app/board-setup/board-setup.component.html
+++ b/src/app/board-setup/board-setup.component.html
@@ -1,6 +1,3 @@
 <div class="board-setup">
-  Board setup will go here.
-  <button routerLink="../piece-selection">
-    Next
-  </button>
+  <app-board [board]="getGame().getBoard()"></app-board>
 </div>
