Terrain painting works.

--- a/src/app/board-setup/board-setup.component.html
+++ b/src/app/board-setup/board-setup.component.html
@@ -1,3 +1,5 @@
 <div class="board-setup">
+  <app-terrain-selector></app-terrain-selector>
   <app-board [board]="getGame().getBoard()"></app-board>
+  <app-board-selector></app-board-selector>
 </div>
