--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -1,4 +1,5 @@
-<div class="cell" [ngClass]="{'selected': cell.selected}" (click)="onCellClicked()">
+<div class="cell" [ngClass]="{'selected': cell.selected}"
+    (pointerdown)="onCellClicked()">
   <div class="cell-terrain" class="{{cell.terrain.type}}">
     <img class="cell-terrain-image" src="/images/terrain/{{cell.terrain.type}}.png">
   </div>
