Added the name of the terrain.

--- a/src/app/terrain-item/terrain-item.component.html
+++ b/src/app/terrain-item/terrain-item.component.html
@@ -1,5 +1,8 @@
 <div class="terrain-item" (click)="select()" [ngClass]="{'terrain-selected': isSelected()}">
   <img class="terrain-item-image" src="/images/terrain/{{terrain.type}}.png">
+  <div class="terrain-name">
+    {{terrain.type}}
+  </div>
   <div class="terrain-combat-power">
     <span [innerHTML]="getCombatPower()"></span>
   </div>
