--- a/src/app/terrain-item/terrain-item.component.scss
+++ b/src/app/terrain-item/terrain-item.component.scss
@@ -17,6 +17,23 @@
   border: 5px solid white;
 }
 
+.terrain-name {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  background: rgba(0, 0, 0, 0.7);
+  width: 100px;
+  right: 0;
+  height: 18px;
+  font-size: 14px;
+  transform: translateX(-50%);
+  text-transform: capitalize;
+}
+
+.terrain-item.terrain-selected>.terrain-name {
+  font-weight: bold;
+}
+
 .terrain-combat-power {
   position: absolute;
   top: 50%;
