Finished board setup with board selector.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -32,8 +32,10 @@
 
   --attack_color: yellow;
 
-  --z_dialog: 21;
-  --z_dialog_background: 20;
+  --z_dialog: 101;
+  --z_dialog_background: 100;
+
+  --z_mirror_overlay: 50;
 
   --z_piece_buttons: 12;
   --z_cell_selected: 11;
