--- a/src/app/board-selector/board-selector.component.html
+++ b/src/app/board-selector/board-selector.component.html
@@ -3,6 +3,13 @@
     Board Selector
   </div>
   <div class="board-selector-list">
-    TODO
+    <app-board-item [board]="boardCollection.createBoard1()"></app-board-item>
+    <app-board-item [board]="boardCollection.createBoard2()"></app-board-item>
+    <app-board-item [board]="boardCollection.createBoard3()"></app-board-item>
+    <app-board-item [board]="boardCollection.createBoard4()"></app-board-item>
+    <app-board-item [board]="boardCollection.createBoard5()"></app-board-item>
+    <app-board-item [board]="boardCollection.createBoard6()"></app-board-item>
+    <app-board-item [board]="boardCollection.createBoard7()"></app-board-item>
+    <app-board-item [board]="boardCollection.createBoard8()"></app-board-item>
   </div>
 </div>
