Created piece selection screen skeleton.

--- a/src/app/piece-selection/piece-selection.component.html
+++ b/src/app/piece-selection/piece-selection.component.html
@@ -1,3 +1,6 @@
 <div class="piece-selection">
-  Piece selection will go here.
+  <app-selected></app-selected>
+  <app-custom-piece-set></app-custom-piece-set>
+  <app-all-piece-collection></app-all-piece-collection>
+  <app-piece-set-selector></app-piece-set-selector>
 </div>
