Basic render of all pieces.

--- a/src/app/all-piece-collection/all-piece-collection.component.html
+++ b/src/app/all-piece-collection/all-piece-collection.component.html
@@ -3,5 +3,8 @@
     All Pieces
   </div>
   <div class="all-piece-collection-list">
+    <div *ngFor="let piece of pieceCollection.createAllPieces().getSet()">
+      {{piece.name}}
+    </div>
   </div>
 </div>
