--- a/src/app/all-piece-collection/all-piece-collection.component.scss
+++ b/src/app/all-piece-collection/all-piece-collection.component.scss
@@ -8,7 +8,6 @@
   background-color: var(--background_color);
   vertical-align: top;
   margin-left: 30px;
-  height: 800px;
 }
 
 .all-piece-collection-title {
@@ -18,4 +17,6 @@
 .all-piece-collection-list {
   padding-top: 18px;
   padding-bottom: 10px;
+  height: 750px;
+  overflow: auto;
 }
