--- a/src/app/all-piece-collection/all-piece-collection.component.scss
+++ b/src/app/all-piece-collection/all-piece-collection.component.scss
@@ -15,8 +15,10 @@
 }
 
 .all-piece-collection-list {
-  padding-top: 18px;
-  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
   height: 750px;
   overflow: auto;
+  text-align: left;
 }
