Custom set piece selection works.

--- a/src/app/all-piece-collection/all-piece-collection.component.scss
+++ b/src/app/all-piece-collection/all-piece-collection.component.scss
@@ -18,6 +18,7 @@
   padding-top: 10px;
   padding-bottom: 5px;
   padding-left: 10px;
+  padding-right: 10px;
   height: 750px;
   overflow: auto;
   text-align: left;
