--- a/src/app/custom-piece-item/custom-piece-item.component.html
+++ b/src/app/custom-piece-item/custom-piece-item.component.html
@@ -1,4 +1,6 @@
-<div class="custom-piece-item">
+<div class="custom-piece-item"
+  [ngClass]="{'selected': isSelected()}"
+  (pointerdown)="select()">
   <button class="remove-piece-button" (pointerdown)="removePiece()">
     <img src="/images/icon/trash_icon_black.png">
   </button>
