--- a/src/app/custom-piece-item/custom-piece-item.component.scss
+++ b/src/app/custom-piece-item/custom-piece-item.component.scss
@@ -1,12 +1,20 @@
 .custom-piece-item {
-  margin-bottom: 5px;
+  cursor: pointer;
+  border: 3px solid transparent;
+  padding: 3px;
+  margin-bottom: -3px;
+}
+
+.custom-piece-item.selected {
+  border: 3px solid white;
 }
 
 .remove-piece-button {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   vertical-align: middle;
   position: relative;
+  margin-right: 6px;
 }
 
 .remove-piece-button>img {
@@ -18,5 +26,5 @@
 }
 
 .custom-piece-item-name {
-  font-size: 20px;
+  font-size: 18px;
 }
