--- a/src/app/game-selection/game-selection.component.html
+++ b/src/app/game-selection/game-selection.component.html
@@ -1,13 +1,28 @@
 <div class="game-selection">
+
+  <div class="custom-game-choice">
+    <div class="custom-board-outline">
+      <div class="custom-board-text-container">
+        <div class="custom-board-text">
+          Custom Board
+        </div>
+      </div>
+    </div>
+    <button class="select-custom-game" (click)="startCustomGameSetup()">
+      Select
+    </button>
+    <div class="custom-set-outline">
+      <div class="custom-set-text-container">
+        <div class="custom-set-text">
+          Custom Set
+        </div>
+      </div>
+    </div>
+  </div>
+
   <app-game-choice
     *ngFor="let game of getPreMadeGames()"
     [game]="game">
   </app-game-choice>
-
-  <div class="custom-game-choice">
-    <div class="custom-board-outline"></div>
-    <button class="select-custom-game" (click)="startCustomGameSetup()">
-      Custom
-    </button>
-  </div>
+  
 </div>
