--- a/src/app/game-selection/game-selection.component.scss
+++ b/src/app/game-selection/game-selection.component.scss
@@ -17,21 +17,49 @@
   margin: 15px;
 }
 
-.custom-board-outline {
-  width: 160px;
-  height: 156px;
+.custom-board-outline,
+.custom-set-outline {
   border: 2px solid #aaa;
   border-style: dashed;
   border-radius: 10px;
   position: absolute;
+  background: #444;
+}
+
+.custom-board-outline {
+  width: 160px;
+  bottom: 20px;
   top: 20px;
   left: 22px;
+}
+
+.custom-set-outline {
+  width: 166px;
+  bottom: 20px;
+  top: 80px;
+  right: 20px;
+}
+
+.custom-board-text-container,
+.custom-set-text-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.custom-board-text,
+.custom-set-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
 }
 
 button.select-custom-game {
   position: absolute;
   top: 20px;
-  right: 30px;
-  width: 160px;
+  right: 20px;
+  width: 170px;
   height: 40px;
 }
