Add point counter for the custom set.

--- a/src/app/all-piece-collection/all-piece-collection.component.scss
+++ b/src/app/all-piece-collection/all-piece-collection.component.scss
@@ -12,6 +12,7 @@
 
 .all-piece-collection-title {
   border-bottom: 1px solid var(--foreground_color);
+  padding: 10px 20px 10px 20px;
 }
 
 .all-piece-collection-list {
