--- a/src/app/piece-set-selector/piece-set-selector.component.scss
+++ b/src/app/piece-set-selector/piece-set-selector.component.scss
@@ -8,16 +8,18 @@
   background-color: var(--background_color);
   vertical-align: top;
   margin-left: 30px;
-  height: 800px;
 }
 
 .piece-set-selector-title {
   border-bottom: 1px solid var(--foreground_color);
+  padding: 10px 20px 10px 20px;
 }
 
 .piece-set-selector-list {
-  padding-top: 18px;
-  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   height: 750px;
   overflow: auto;
 }
