Added pre-built sets and made them selectable.

--- a/src/app/piece-set-selector/piece-set-selector.component.html
+++ b/src/app/piece-set-selector/piece-set-selector.component.html
@@ -3,5 +3,13 @@
     Pre-Built Sets
   </div>
   <div class="piece-set-selector-list">
+    <app-piece-set [pieceSet]="pieceSetCollection.createSet1()"></app-piece-set>
+    <app-piece-set [pieceSet]="pieceSetCollection.createSet2()"></app-piece-set>
+    <app-piece-set [pieceSet]="pieceSetCollection.createSet3()"></app-piece-set>
+    <app-piece-set [pieceSet]="pieceSetCollection.createSet4()"></app-piece-set>
+    <app-piece-set [pieceSet]="pieceSetCollection.createSet5()"></app-piece-set>
+    <app-piece-set [pieceSet]="pieceSetCollection.createSet6()"></app-piece-set>
+    <app-piece-set [pieceSet]="pieceSetCollection.createSet7()"></app-piece-set>
+    <app-piece-set [pieceSet]="pieceSetCollection.createSet8()"></app-piece-set>
   </div>
 </div>
