Rendering pieces on piece placement works.

--- a/src/app/custom-game/custom-game.component.html
+++ b/src/app/custom-game/custom-game.component.html
@@ -1,6 +1,8 @@
 <div class="custom-game">
   
-  <app-custom-game-progress></app-custom-game-progress>
+  <div class="custom-game-progress-container">
+    <app-custom-game-progress></app-custom-game-progress>
+  </div>
   
   <div class="custom-game-router-outlet">
     <router-outlet></router-outlet>
