--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <!-- Render the piece. -->
-  <app-piece [piece]="cell.getPiece()!"></app-piece>
+  <app-piece *ngIf="cell.hasPiece()" [piece]="cell.getPiece()!"></app-piece>
 
   <!-- Render this as an overlay on the piece. -->
   <!--
