--- a/src/app/custom-game/custom-game.component.scss
+++ b/src/app/custom-game/custom-game.component.scss
@@ -1,5 +1,10 @@
 .custom-game {
-  margin-top: 140px;
+  margin-top: 100px;
+}
+
+.custom-game-progress-container {
+  width: 1000px;
+  margin: auto;
 }
 
 .custom-game-router-outlet {
