--- a/src/app/piece-placement/piece-placement.component.html
+++ b/src/app/piece-placement/piece-placement.component.html
@@ -1,7 +1,10 @@
 <div class="piece-placement">
 
   <div class="piece-set-container">
-    <div class="piece-container" *ngFor="let piece of getPieces()">
+    <div *ngFor="let piece of getPieces()"
+        class="piece-container"
+        [ngClass]="{'selected': isSelected(piece)}"
+        (pointerdown)="select(piece)">
       <app-piece [piece]="piece"></app-piece>
     </div>
   </div>
