--- a/src/app/piece-placement/piece-placement.component.scss
+++ b/src/app/piece-placement/piece-placement.component.scss
@@ -6,14 +6,14 @@
 }
 
 .left-panel {
-  margin-top: 140px;
+  margin-top: 150px;
   margin-right: 40px;
   position: relative;
   margin-left: 40px;
 }
 
 .right-panel {
-  margin-top: 140px;
+  margin-top: 150px;
   margin-right: 40px;
 }
 
@@ -23,7 +23,7 @@
   left: 40px;
   right: 40px;
   background: #333;
-  height: 110px;
+  height: 120px;
   border: 1.5px solid white;
   border-radius: 20px;
   overflow: hidden;
@@ -34,4 +34,10 @@
   width: 100px;
   height: 100px;
   display: inline-block;
+  margin-top: 6px;
+  border: 3px solid transparent;
+}
+
+.piece-container.selected {
+  border: 3px solid white;
 }
