Made non selected text conditional on context.

--- a/src/app/selected/selected.component.html
+++ b/src/app/selected/selected.component.html
@@ -6,7 +6,7 @@
       Nothing selected
     </div>
     <div class="nothing-selected-instructions">
-      Select a piece to move or attack.
+      {{getNotSelectedText()}}
     </div>
   </div>
 
