--- a/src/app/all-piece-item/all-piece-item.component.html
+++ b/src/app/all-piece-item/all-piece-item.component.html
@@ -1,10 +1,16 @@
 <div class="all-piece-item"
     [ngClass]="{'selected': isSelected()}"
     (pointerdown)="select()">
-  <button class="add-piece-button" (pointerdown)="addPiece()">
+
+  <button
+      class="add-piece-button"
+      (pointerdown)="addPiece()"
+      [disabled]="!canAddPiece()">
     <img src="/images/icon/add_icon_black.png">
   </button>
+
   <span class="all-piece-item-name">
     {{piece.name}}
   </span>
+
 </div>
