--- a/src/app/custom-game-progress/custom-game-progress.component.scss
+++ b/src/app/custom-game-progress/custom-game-progress.component.scss
@@ -21,3 +21,12 @@
 .custom-game-setup-step > button {
   width: 180px;
 }
+
+.error-indicator {
+  display: none;
+  color: var(--debuffed_color);
+}
+
+.error-indicator.invalid {
+  display: inline;
+}
